# izel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  hello.iz
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
compiler/: izelc.iz
crates/izel_ast_lower/: Cargo.toml
crates/izel_ast_lower/src/: elaboration.rs  lib.rs
crates/izel_ast_lower/tests/: test_ast.rs  test_corpus.rs
crates/izel_borrow/: Cargo.toml
crates/izel_borrow/src/: lib.rs
crates/izel_borrow/tests/: test_borrow.rs
crates/izel_codegen/: Cargo.toml
crates/izel_codegen/src/: lib.rs
crates/izel_codegen/tests/: test_codegen.rs
crates/izel_diagnostics/: Cargo.toml
crates/izel_diagnostics/src/: lib.rs
crates/izel_diagnostics/tests/: test_diagnostics.rs
crates/izel_doc/: Cargo.toml
crates/izel_doc/src/: lib.rs
crates/izel_doc/tests/: test_doc.rs
crates/izel_driver/: Cargo.toml
crates/izel_driver/src/: main.rs
crates/izel_driver/tests/: test_driver.rs  test_driver_cli.rs  test_driver_runtime_io.rs
crates/izel_driver/tests/fixtures/: custom_iterator.iz
crates/izel_fmt/src/: formatter.rs
crates/izel_fmt/tests/: test_fmt.rs
crates/izel_hir/src/: lib.rs  lower.rs
crates/izel_lexer/: Cargo.toml
crates/izel_lexer/fuzz/: Cargo.toml
crates/izel_lexer/fuzz/fuzz_targets/: lexer_fuzz.rs
crates/izel_lexer/src/: lexer.rs  lib.rs  string_reader.rs
crates/izel_lexer/tests/: test_lexer.rs  test_string_reader.rs
crates/izel_lint/: Cargo.toml
crates/izel_lint/src/: lib.rs
crates/izel_lint/tests/: test_lint.rs
crates/izel_lsp/: Cargo.toml
crates/izel_lsp/src/: lib.rs
crates/izel_lsp/tests/: test_lsp.rs
crates/izel_mir/: Cargo.toml
crates/izel_mir/src/: lib.rs  lower.rs  optim.rs
crates/izel_mir/tests/: test_mir.rs
crates/izel_opt/: Cargo.toml
crates/izel_opt/src/: lib.rs  pass.rs
crates/izel_opt/src/passes/: const_fold.rs  dce.rs  escape.rs  gvn.rs  inline.rs  iter_fuse.rs  licm.rs  mod.rs  sroa.rs  tco.rs
crates/izel_opt/tests/: test_opt.rs
crates/izel_parser/: Cargo.toml
crates/izel_parser/src/: ast.rs  contracts.rs  cst.rs  eval.rs  expr.rs  lib.rs
crates/izel_parser/tests/: test_ast.rs  test_cst.rs  test_eval.rs  test_parser.rs
crates/izel_pm/: Cargo.toml
crates/izel_pm/src/: lib.rs  main.rs  manifest.rs  resolve.rs
crates/izel_pm/tests/: test_pm.rs  test_pm_cli.rs
crates/izel_proc_macro/: Cargo.toml
crates/izel_proc_macro/src/: lib.rs
crates/izel_proc_macro/tests/: test_proc.rs
crates/izel_query/: Cargo.toml
crates/izel_query/src/: lib.rs
crates/izel_query/tests/: test_query.rs
crates/izel_resolve/: Cargo.toml
crates/izel_resolve/src/: lib.rs
crates/izel_resolve/tests/: test_resolve.rs
crates/izel_session/: Cargo.toml
crates/izel_session/src/: lib.rs
crates/izel_session/tests/: test_session.rs
crates/izel_span/: Cargo.toml
crates/izel_span/src/: lib.rs
crates/izel_span/tests/: test_span.rs
crates/izel_std/: Cargo.toml
crates/izel_std/src/: lib.rs
crates/izel_std/tests/: test_std.rs
crates/izel_typeck/: Cargo.toml
crates/izel_typeck/src/: contracts.rs  lib.rs  type_system.rs
crates/izel_typeck/tests/: test_typeck.rs
docs/: checklist.md  po_checklist.md  project_overview.md  tests_checklist.md
docs/book/: 01-getting-started.md  09-sample-applications.md  intro.md
docs/reference/: README.md
docs/spec/: 01-lexical.md  02-syntax.md  03-types.md  04-effects.md  05-memory.md  06-witnesses.md  07-contracts.md  08-zones.md  09-duality.md  appendix-a-grammar.md  appendix-b-keywords.md  appendix-c-stdlib.md  duality.md  effects.md  intro.md  memory_zones.md
examples/: coherence_test.iz  hello.iz  iter_test.iz  memory_zones.iz  shape.iz  temporal_constraints.iz  test_lex.iz  witness_test.iz
registry/: README.md
registry/index/: packages.json
sample_applications/: 001_budget_forecast_calculator.iz  013_customer_churn_monitor.iz  CAPABILITY_MATRIX.md  README.md
std/: fs.iz  io.iz
tests/: Cargo.toml  safety_triad.iz
tests/compile_pass/: io_status_helpers.iz  io_try_helpers.iz
tests/run_pass/stdlib/: io_test.iz
tests/snapshots/: integration_suite.snap
tests/tests/: compiler_pipeline.rs
tools/bootstrap/: bootstrap_sources.sha256  self_host_bootstrap.sh
tools/ci/: check_commit_message.sh  check_coverage.sh  check_system_deps.sh  with_llvm_env.sh
tools/grammar/tree-sitter-izel/: README.md  grammar.js  package.json
tools/grammar/tree-sitter-izel/queries/: highlights.scm
tools/grammar/vscode-izel/: .gitignore  .vscodeignore  package.json
tools/playground/: README.md  index.html  main.js  package.json  styles.css
tools/playground/wasm/: Cargo.toml
tools/playground/wasm/src/: lib.rs
