[workspace]
resolver = "2"
members = [
    "crates/izel_span",
    "crates/izel_session",
    "crates/izel_diagnostics",
    "crates/izel_lexer",
    "crates/izel_parser",
    "crates/izel_codegen",
    "crates/izel_mir",
    "crates/izel_resolve",
    "crates/izel_typeck",
    "crates/izel_ast_lower",
    "crates/izel_driver", "crates/izel_borrow",
    "crates/izel_fmt",
    "crates/izel_lsp",
    "crates/izel_pm",
    "crates/izel_hir",
    "tests", "crates/izel_opt", "crates/izel_query", "crates/izel_proc_macro", "crates/izel_lint", "crates/izel_doc", "crates/izel_std",
]

[workspace.package]
version = "0.1.0"
authors = ["VoxDroid <izeno.contact@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/VoxDroid/izel"
description = "Izel — A unique, multi-paradigm systems programming language."

[workspace.dependencies]
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
llvm-sys = "170.0"
salsa = "0.19.0"
codespan-reporting = "0.11.1"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
winnow = "0.6"
rustc-hash = "1.1"
indexmap = "2.1"
petgraph = "0.6"
string-interner = "0.17"
smallvec = "1.11"
bumpalo = "3.14"

# Internal Crates
izel_span = { path = "crates/izel_span" }
izel_parser = { path = "crates/izel_parser" }
izel_diagnostics = { path = "crates/izel_diagnostics" }
izel_resolve = { path = "crates/izel_resolve" }
izel_lexer = { path = "crates/izel_lexer" }
izel_ast_lower = { path = "crates/izel_ast_lower" }
izel_typeck = { path = "crates/izel_typeck" }
izel_mir = { path = "crates/izel_mir" }
izel_codegen = { path = "crates/izel_codegen" }
izel_driver = { path = "crates/izel_driver" }
izel_session = { path = "crates/izel_session" }
izel_borrow = { path = "crates/izel_borrow" }
izel_fmt = { path = "crates/izel_fmt" }
izel_lsp = { path = "crates/izel_lsp" }
izel_pm = { path = "crates/izel_pm" }
izel_hir = { path = "crates/izel_hir" }
