[package]
name = "izel_integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
izel_span = { path = "../crates/izel_span" }
izel_lexer = { path = "../crates/izel_lexer" }
izel_parser = { path = "../crates/izel_parser" }
izel_resolve = { path = "../crates/izel_resolve" }
izel_ast_lower = { path = "../crates/izel_ast_lower" }
izel_typeck = { path = "../crates/izel_typeck" }
