[package]
name = "izel_codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { path = "../izel_span" }
izel_parser = { path = "../izel_parser" }
inkwell = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
