[package]
name = "izel_codegen"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { workspace = true }
izel_lexer = { workspace = true }
izel_parser = { workspace = true }
izel_mir = { workspace = true }
izel_typeck = { workspace = true }
inkwell = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
