[package]
name = "izel_driver"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { path = "../izel_span" }
izel_session = { path = "../izel_session" }
izel_lexer = { path = "../izel_lexer" }
izel_parser = { path = "../izel_parser" }
izel_codegen = { path = "../izel_codegen" }
izel_mir = { path = "../izel_mir" }
izel_resolve = { path = "../izel_resolve" }
izel_typeck = { path = "../izel_typeck" }
izel_diagnostics = { path = "../izel_diagnostics" }
inkwell = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "izelc"
path = "src/main.rs"
