[package]
name = "izel_driver"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { workspace = true }
izel_session = { workspace = true }
izel_lexer = { workspace = true }
izel_parser = { workspace = true }
izel_ast_lower = { workspace = true }
izel_codegen = { workspace = true }
izel_mir = { workspace = true }
izel_borrow = { workspace = true }
izel_resolve = { workspace = true }
izel_typeck = { workspace = true }
izel_diagnostics = { workspace = true }
inkwell = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
izel_fmt = { workspace = true }
izel_lsp = { workspace = true }
izel_pm = { workspace = true }
izel_hir = { workspace = true }

[[bin]]
name = "izelc"
path = "src/main.rs"
