[package]
name = "izel_parser"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { path = "../izel_span" }
izel_diagnostics = { path = "../izel_diagnostics" }
izel_lexer = { path = "../izel_lexer" }
tracing = { workspace = true }
