[package]
name = "izel_pm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Package manager and dependency resolver for Izel."

[dependencies]
winnow = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "izel"
path = "src/main.rs"
