[package]
name = "izel_typeck"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { path = "../izel_span" }
izel_resolve = { path = "../izel_resolve" }
izel_parser = { path = "../izel_parser" }
rustc-hash = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
