[package]
name = "izel_lexer-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
izel_lexer = { path = ".." }
izel_span = { path = "../../izel_span" }

[[bin]]
name = "lexer_fuzz"
path = "fuzz_targets/lexer_fuzz.rs"
test = false
doc = false
bench = false
